--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,24 @@
 // Navigation code here
+.nav-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: whitesmoke;
+    border-bottom: 1px solid gainsboro;
+    padding: .padding-style(20px);
+
+    h1 {
+        font-size: 4rem;
+    }
+
+    nav {
+        .flexcenter();
+
+        a {
+            text-decoration: none;
+            margin: 15px 1.6rem;
+            color: black;
+            font-size: 1.6rem;
+        }
+    }
+} 
