--- a/less/home-page.less
+++ b/less/home-page.less
@@ -13,11 +13,11 @@
     }
 
     h2 {
-      padding: .padding-style()
+      .padding-style()
     }
 
     p {
-      padding: .padding-style();
+      .padding-style();
     }
   
   }
@@ -45,7 +45,7 @@
   }
 
   .visit-planets {
-    padding: .padding-style();
+    .padding-style();
 
     h3 {
       margin-top: 11px;
@@ -59,13 +59,13 @@
   .walk {
     margin-top: 60px;
     border-top: 1px solid @main-border-color;
-    padding: .padding-style();
+    .padding-style();
     padding: 50px;
     .flexcenter();
     @media @phone {
       flex-direction: column-reverse;
       margin-top: 15px;
-      padding: .padding-style();
+      .padding-style();
     }
 
     .walk-text {
