--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,7 +5,7 @@
     align-items: center;
     background-color: whitesmoke;
     border-bottom: 1px solid gainsboro;
-    padding: .padding-style(20px);
+    .padding-style(20px);
 
     h1 {
         font-size: 4rem;
